# ia-cctv-pyrgos

./: .dockerignore  .env.example  .gitignore  CURRENT_STATE.md  Dockerfile.api  README.md  docker-compose.yml  go2rtc.yaml.example  pyproject.toml  run_go2rtc_tapo.bat  run_multicam_local.example.bat  run_tapo_api.bat  run_tapo_local.bat
app/: __init__.py  runtime.py
app/api/: main.py  schemas.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  pipeline.py
app/detectors/: __init__.py  base.py  null_detector.py  rfdetr_detector.py
app/domain/: __init__.py  events.py
app/repositories/: __init__.py  events.py
app/services/: __init__.py  events.py  live_detection.py  local_ai.py
app/stream/: __init__.py  ip_camera.py
app/ui/: __init__.py  native_panel.py  opencv_renderer.py
app/web/: index.html
app/web/assets/: app.js  styles.css
app/webrtc/: __init__.py  rtsp_video.py  schemas.py
scripts/: run_local.py
tests/: test_api.py  test_events.py  test_frontend.py  test_live_detection.py  test_local_ai.py  test_rfdetr_detector.py  test_runtime.py  test_settings.py  test_sqlite_repository.py  test_stream.py
