[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-cctv-pyrgos"
version = "0.1.0"
description = "IA CCTV PYRGOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
rfdetr = [
  "rfdetr",
  "supervision",
]
webrtc = [
  "aiortc>=1.10.0,<2.0.0",
  "av>=14.0.0,<15.0.0",
]
dev = [
  "pytest>=8,<9",
  "httpx>=0.28.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
